--- a/project1/index.html
+++ b/project1/index.html
@@ -5,12 +5,12 @@
     <title>Наш сайт</title>
     <meta name="viewport" content="width=device-width, maximum-scale=1">
     <!-- Підключення Bootstrap -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Підключення шрифтів fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- Підключення моїх стилів -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
     <!-- Шапка сайта -->
@@ -36,10 +36,10 @@
       <section id="soc">
         <div class="container">
           <ul class="row justify-content-end">
-            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="/img/soc/f.png" alt="facebook"></a></li>
-            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="/img/soc/i.png" alt="instagram"></a></li>
-            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="/img/soc/p.png" alt="pinterest"></a></li>
-            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="/img/soc/t.png" alt="twitter"></a></li>
+            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="img/soc/f.png" alt="facebook"></a></li>
+            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="img/soc/i.png" alt="instagram"></a></li>
+            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="img/soc/p.png" alt="pinterest"></a></li>
+            <li class="col-lg-1 col-sm-2 col-1"><a href="#"><img src="img/soc/t.png" alt="twitter"></a></li>
           </ul>
         </div>
       </section>
@@ -72,16 +72,16 @@
           <div class="wrapper row">
             <div class="about-img col-xl-6 row">
               <div class="wrapper-img col-xl-6 col-md-3 col-4">
-                <div class="img"><img src="/img/img1.png" alt="Те що ми робимо"></div>
+                <div class="img"><img src="img/img1.png" alt="Те що ми робимо"></div>
               </div>
               <div class="wrapper-img col-xl-6 col-md-3 col-4">
-                <div class="img"><img src="/img/img2.png" alt="Те що ми робимо"></div>
+                <div class="img"><img src="img/img2.png" alt="Те що ми робимо"></div>
               </div>
               <div class="wrapper-img col-xl-6 col-md-3 col-4">
-                <div class="img"><img src="/img/img3.png" alt="Те що ми робимо"></div>
+                <div class="img"><img src="img/img3.png" alt="Те що ми робимо"></div>
               </div>
               <div class="wrapper-img col-xl-6 col-md-3 col-4">
-                <div class="img"><img src="/img/img4.png" alt="Те що ми робимо"></div>
+                <div class="img"><img src="img/img4.png" alt="Те що ми робимо"></div>
               </div>
             </div>
             <div class="about-text col-xl-6">
@@ -115,7 +115,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w1.png" alt="Уже виконані роботи">
+                  <img src="img/work/w1.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -128,7 +128,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w2.png" alt="Уже виконані роботи">
+                  <img src="img/work/w2.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -141,7 +141,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w3.png" alt="Уже виконані роботи">
+                  <img src="img/work/w3.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -154,7 +154,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w4.png" alt="Уже виконані роботи">
+                  <img src="img/work/w4.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -167,7 +167,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w5.png" alt="Уже виконані роботи">
+                  <img src="img/work/w5.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -180,7 +180,7 @@
               <a class="shadow" href="#">
                 <div class="img">
                   <div class="hover-active"><i class="fas fa-search inover"></i></div>
-                  <img src="/img/work/w6.png" alt="Уже виконані роботи">
+                  <img src="img/work/w6.png" alt="Уже виконані роботи">
                 </div>
                 <p>
                   Дитячий мобіль з фіолетивими
@@ -256,8 +256,8 @@
       </section>
     </footer>
     <!-- Підключення jQuery -->
-    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <!-- Підключення нашого javascript -->
-    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
